--- a/public/schoolClass/css/login.css
+++ b/public/schoolClass/css/login.css
@@ -283,16 +283,14 @@ input#act{
 .downPhone{
     position: relative;
     cursor: pointer;
-    padding: 0 15px;
+    padding: 15px 15px 0;
 }
 .downPhone .download-pop-up{
-    width: 143px;
-    height: 172px;
     background: url(../img/down-pop-up.png) center center;
     background-size: cover;
-    padding: 5px 10px 44px 10px;
+    padding: 5px 10px 15px 10px;
     position: absolute;
-    top: -182px;
+    top: -167px;
     z-index: 100;
     transform: translateX(-50%);
     left: 50%;
@@ -300,48 +298,42 @@ input#act{
     display: none;
     font-size: 13px;
 }
+
 .downPhone .download-pop-up > div{
     margin-bottom: 7px;
 }
 .downPhone .download-pop-up span{
     font-size: 12px;
-    line-height: 24px;
     color: #e5e5e5;
 }
 .downPhone .download-pop-up img{
-    width: 100%;
-    height: 100%;
+    width: 123px;
+    height: 123px;
 }
 .downPhone:hover .download-pop-up{
     display: block;
 }
 .downPhone.android .download-pop-up{
-    /*width: 121px;*/
-    /*height: 160px;*/
-    /*top: -170px;*/
-    /*padding: 10px 10px 55px 10px;*/
-
-    width: 143px;
-    height: 188px;
-    top: -198px;
-    padding: 5px 10px 60px 10px;
+    top: -181px;
+    padding: 5px 10px 13px 10px;
 }
 .downPcNew.downPhone .download-pop-up{
-    height: 34px;
-    top: -44px;
-    padding: 0;
+    width: 143px;
+    top: -36px;
+    padding: 7px 0 15px 0;
     background: url(../img/down-pop-up.png) center bottom;
     background-size: auto;
+
 }
 .downPcNew.downPhone .download-pop-up > div{
-    padding-top: 3px;
+   margin-bottom: 0;
 }
 .downApp{
     color: #fff;
     font-size: 14px;
 }
 .downInner{
-    padding-top: 25px;
+    padding-top: 10px;
     justify-content: center;
 }
 
@@ -354,6 +346,6 @@ input#act{
 }
 .downPcNew{
     cursor: pointer;
-    padding: 0 15px;
+    padding: 15px 15px 0;
 }
 
