--- a/public/schoolClass/css/login.css
+++ b/public/schoolClass/css/login.css
@@ -120,7 +120,7 @@ input:-webkit-autofill{
     width: 100%;
     position: absolute;
     left: 0;
-    top: 83px;
+    top: 84px;
     box-sizing: border-box;
     border: 1px #e5e5e5 solid;
     background: white;
@@ -305,6 +305,7 @@ input#act{
 .downPhone .download-pop-up span{
     font-size: 12px;
     color: #e5e5e5;
+    white-space: nowrap;
 }
 .downPhone .download-pop-up img{
     width: 123px;
