--- a/public/schoolClass/css/live.css
+++ b/public/schoolClass/css/live.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 /* CSS Document */
-html,body,div,span,h1,h2,h3,h4,h5,h6,p,pre,a,code,em,img,small,strong,sub,sup,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label{	
+html,body,div,span,h1,h2,h3,h4,h5,h6,p,pre,a,code,em,img,small,strong,sub,sup,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label{
 	margin:0;
     padding:0;
     border:0;
@@ -36,7 +36,7 @@ iframe{
 .live_left iframe{
 	border-width:0;
 	width:300px;
-	
+
 }
 .live_cont{
 	position:absolute;
@@ -466,7 +466,7 @@ iframe{
 
 
 	::-webkit-scrollbar-thumb {
-		  background-color: #ccc; 
+		  background-color: #ccc;
 		  border-radius: 9px;
 		  -webkit-border-radius: 9px;
 	} /* 滑块颜色 */
@@ -637,7 +637,7 @@ iframe{
 		  height:8px;
 	} /* 这是针对缺省样式 (必须的) */
  #video_container::-webkit-scrollbar-thumb {
-		  background-color: transparent; 
+		  background-color: transparent;
 		  border-radius: 9px;
 		  -webkit-border-radius: 9px;
 	} /* 滑块颜色 */
@@ -810,7 +810,7 @@ iframe{
 }
 .courseWareUl_2 li article > div p{
 	margin:0
-} 
+}
 .courseWareUl_2 li article > div p img{
 	max-width:100%
 }
@@ -944,10 +944,23 @@ iframe{
 	max-height: 422px;
     overflow: auto;
 }
+
+.big_video_filter{
+    background: url("../img/00-3.jpg") no-repeat;
+    background-size: 100% 100%;
+    object-fit: cover;
+    filter: grayscale(70%) blur(20px);
+    width: calc(100% - 240px);
+    height: 100%;
+    text-align: center;
+    position: absolute;
+    z-index: 8000009;
+    left: 240px;
+    top:0;
+}
 .big_video_new{
 	width: calc(100% - 240px);
     height: 100%;
-    background: black;
     position: absolute;
     z-index: 9000000;
     left: 240px;
@@ -1102,8 +1115,8 @@ iframe{
 	width:70%;
 }
 .player_video_i_50{
-	width: 70px; 
-	height: 70px; 
+	width: 70px;
+	height: 70px;
 	position: relative;
 	margin-bottom: 12px;
     margin-left: 0;
@@ -1470,7 +1483,7 @@ ul.layui-layer-tabmain li{
 .linkmai_default_text {
     color: #a8a7a7;
     font-size: 16px;
-    margin-top: 20px;  
+    margin-top: 20px;
 }
 .maixu_tan{
 	width: 240px;
