--- a/public/schoolClass/css/live.css
+++ b/public/schoolClass/css/live.css
@@ -944,20 +944,6 @@ iframe{
 	max-height: 422px;
     overflow: auto;
 }
-
-.big_video_filter{
-    background: url("../img/00-3.jpg") no-repeat;
-    background-size: 100% 100%;
-    object-fit: cover;
-    filter: grayscale(70%) blur(20px);
-    width: calc(100% - 240px);
-    height: 100%;
-    text-align: center;
-    position: absolute;
-    z-index: 8000009;
-    left: 240px;
-    top:0;
-}
 .big_video_new{
 	width: calc(100% - 240px);
     height: 100%;
@@ -966,6 +952,9 @@ iframe{
     left: 240px;
     top: 0;
     overflow: hidden;
+    background: url("../img/book2.png") no-repeat;
+    background-size: 100% 100%;
+    object-fit: cover;
 }
 .big_video_new div{
     width: 100%;
